added an img folder

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="nav">
             <div class="firstlogo">
-                <img src="FullLogo.png" alt="logo">
+                <img src="img/FullLogo.png" alt="logo">
             </div>
             <div class="navlink">
                 <a href="/index.html" class="about">About us</a>
@@ -24,7 +24,7 @@
         </div>
     </header>
     <div class="firstsection">
-        <img src="logo (1)head.png" alt="logo">
+        <img src="img/logo (1)head.png" alt="logo">
         <p id="Making">Making the healthcare experience more human</p>
     </div>
     <div class="doubleparagraph">
@@ -38,7 +38,7 @@
 
     <div class="secondsection">
         <div class="green">
-            <img src="icon-patients.svg" alt="patient">
+            <img src="img/icon-patients.svg" alt="patient">
             <p id="patient">for patients</p>
             <p>Find a doctor, book a visit and solve any health-related doubt</p>
             <div class="select">
@@ -62,7 +62,7 @@
         </div>
 
         <div class="blue">
-                <img src="icon-doctors.svg" alt="doctor">
+                <img src="img/icon-doctors.svg" alt="doctor">
                 <p id="doctor">For doctor</p>
                 <p>Save time managing visits and cut no-shows by half</p>
                 <div class="select">
@@ -86,7 +86,7 @@
         </div>
 
                 <div class="black" >
-                    <img src="icon-clinics.svg" alt="clinices">
+                    <img src="img/icon-clinics.svg" alt="clinices">
                     <p id="clinics">For clinics</p>
                     <p>Deliver an exceptional patient experience in your clinic
                 
@@ -116,15 +116,15 @@
                     
 
                         <div id="section logos">
-                        <img src="znanylekarz.jpeg" alt="znanylekarz">
-                        <img src="Doctoralia.jpeg" alt="Doctoralia">
-                        <img src="MioDottore.jpeg" alt="MioDottore">
-                        <img src="Znamylekar.jpg" alt="Znamylekar">
-                        <img src="logo-jameda.svg" alt="jameda">
-                        <img src="logo-tuotempo.svg" alt="tuotempo">
-                        <img src="logo-gipo-primary.svg" alt="gipo">
-                        <img src="logo-clinicloud.svg" alt="cliniccloud">
-                        <img src="logo-feegow.jpeg" alt="feegow">
+                        <img src="img/znanylekarz.jpeg" alt="znanylekarz">
+                        <img src="img/Doctoralia.jpeg" alt="Doctoralia">
+                        <img src="img/MioDottore.jpeg" alt="MioDottore">
+                        <img src="img/Znamylekar.jpg" alt="Znamylekar">
+                        <img src="img/logo-jameda.svg" alt="jameda">
+                        <img src="img/logo-tuotempo.svg" alt="tuotempo">
+                        <img src="img/logo-gipo-primary.svg" alt="gipo">
+                        <img src="img/logo-clinicloud.svg" alt="cliniccloud">
+                        <img src="img/logo-feegow.jpeg" alt="feegow">
                         </div>
 
                     <div class="fourth section">
@@ -133,30 +133,30 @@
                     healthcare platform</h2>   
                    <p>We work from 9 offices all over the world, bringing Docplanner
                          Group to life in 13 countries.</p>
-                       <img src="logocropped (1).png" alt="logocropped">
+                       <img src="img/logocropped (1).png" alt="logocropped">
 
                      <div class="fourth section">
                     <div class="first 2"></div>
                      <div id="leader"></div>
-                        <img src="flag.png" alt="flag">
+                        <img src="img/flag.png" alt="flag">
                      <h3>Leader in 13 countries</h3>
                      <p>Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia, Czech Republic, Portugal, Argentina, Peru and Chile</p>
 
                       </div> 
                       <div id="patient">
-                        <img src="patients.png" alt="patients">
+                        <img src="img/patients.png" alt="patients">
                         <h3>90,000,000 patients</h3>
                         <p>visit our websites each mont</p>
                       </div>
                         </div>
                         <div class="second 2">
                             <div id="appointment">
-                                <img src="visits.png" alt="visits">
+                                <img src="img/visits.png" alt="visits">
                                 <h3>15,000,000 appointments</h3>
                                 <p>booked last month</p>
                             </div>
                             <div id="doctor">
-                                <img src="doctors.png" alt="doctor">
+                                <img src="img/doctors.png" alt="doctor">
                                 <h3>210,000 active doctors</h3>
                                 <p>trust our solution</p>
                             </div>
@@ -172,7 +172,7 @@
                         </div>
                         <div class="sixth section">
                         <div class="country">
-                            <img src="warsaw.png" alt="warsaw">
+                            <img src="img/warsaw.png" alt="warsaw">
                             <div class="button">
                                 <p>Warsaw</p>
                                  <button type="button">
@@ -180,7 +180,7 @@
                                  </button>
                             </div>
                                     <div>
-                                        <img src="barcelona.png" alt="barcelona">
+                                        <img src="img/barcelona.png" alt="barcelona">
                                         <div class="button">
                                            <p>Barcelona</p>
                                            <button type="button">
@@ -188,7 +188,7 @@
                                            </button>
                                         </div>
                                            <div>
-                                             <img src="munich.png" alt="munich">
+                                             <img src="img/munich.png" alt="munich">
                                         <div class="button">
                                            <p>Munich</p>
                                            <button type="button">
@@ -196,7 +196,7 @@
                                            </button>
                                            </div>
                                         <div>
-                                            <img src="istanbul.png" alt="istanbul">
+                                            <img src="img/istanbul.png" alt="istanbul">
                                            <div class="button">
                                               <p>Instanbul</p>
                                               <button type="button">
@@ -204,7 +204,7 @@
                                               </button>
                                         </div>
                                         <div>
-                                            <img src="rome.png" alt="Rome">
+                                            <img src="img/rome.png" alt="Rome">
                                            <div class="button">
                                               <p>Rome</p>
                                               <button type="button">
@@ -212,7 +212,7 @@
                                               </button>
                                         </div>
                                         <div>
-                                            <img src="bologna.png" alt="bologna">
+                                            <img src="img/bologna.png" alt="bologna">
                                            <div class="button">
                                               <p>Bologna</p>
                                               <button type="button">
@@ -220,7 +220,7 @@
                                               </button>
                                         </div>
                                         <div>
-                                            <img src="curitiba.png" alt="curitiba">
+                                            <img src="img/curitiba.png" alt="curitiba">
                                            <div class="button">
                                               <p>Curitiba</p>
                                               <button type="button">
@@ -228,7 +228,7 @@
                                               </button>
                                         </div>
                                         <div>
-                                            <img src="rio-janeiro.png" alt="rio-janeiro">
+                                            <img src="img/rio-janeiro.png" alt="rio-janeiro">
                                            <div class="button">
                                               <p>Rio-Janeiro</p>
                                               <button type="button">
@@ -236,7 +236,7 @@
                                               </button>
                                         </div>
                                         <div>
-                                            <img src="mexico-city.png" alt="mexico-city">
+                                            <img src="img/mexico-city.png" alt="mexico-city">
                                            <div class="button">
                                               <p>Mexico-City</p>
                                               <button type="button">
